force-app/main/default/objects/Contact/fields/AbbottClassification__c.field-meta.xml
<CustomField>
    <fullName>AbbottClassification__c</fullName>
    <description>[8-Jul-21 KSK] Used for target object mapping - Dynamics data migration</description>
    <label>Abbott Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>865730001:A</fullName>
            </value>
            <value>
                <fullName>865730002:B</fullName>
            </value>
            <value>
                <fullName>865730003:C</fullName>
            </value>
            <value>
                <fullName>865730000:N</fullName>
            </value>
            <value>
                <fullName>865730006:E</fullName>
            </value>
            <value>
                <fullName>865730007:F</fullName>
            </value>
            <value>
                <fullName>865730008:H</fullName>
            </value>
            <value>
                <fullName>865730009:P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>