force-app/main/default/objects/Contact/fields/AfterBirthCareCenter__c.field-meta.xml
<CustomField>
    <fullName>AfterBirthCareCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>After Birth Care Center</label>
    <referenceTo>Institution__c</referenceTo>
    <relationshipLabel>Contacts (After Birth Care Center)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>