force-app/main/default/objects/Contact/fields/AgeinMonths2__c.field-meta.xml
<CustomField>
    <fullName>AgeinMonths2__c</fullName>
    <label>Age (in Months) 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>