force-app/main/default/objects/Contact/fields/AgeinMonths__c.field-meta.xml
<CustomField>
    <fullName>AgeinMonths__c</fullName>
    <formula>IF(NOT(ISBLANK(Birthdate)),
        IF(DAY(Birthdate) &lt;= DAY(TODAY()),
        (YEAR( TODAY())*12+MONTH(TODAY())) - (YEAR(Birthdate)*12+MONTH(Birthdate)),
        (YEAR( TODAY())*12+MONTH(TODAY())) - (YEAR(Birthdate)*12+MONTH(Birthdate))-1
        ),
        0
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (in Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>