force-app/main/default/objects/Contact/fields/AgeRange__c.field-meta.xml
<CustomField>
    <fullName>AgeRange__c</fullName>
    <label>Age Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-6 Months</fullName>
            </value>
            <value>
                <fullName>6-12 Months</fullName>
            </value>
            <value>
                <fullName>1-2 Years</fullName>
            </value>
            <value>
                <fullName>2-3 Years</fullName>
            </value>
            <value>
                <fullName>3-4 Years</fullName>
            </value>
            <value>
                <fullName>4-5 Years</fullName>
            </value>
            <value>
                <fullName>5-6 Years</fullName>
            </value>
            <value>
                <fullName>6-8 Years</fullName>
            </value>
            <value>
                <fullName>6 Years and Above</fullName>
            </value>
            <value>
                <fullName>3-5 Years</fullName>
            </value>
            <value>
                <fullName>9-12 years</fullName>
            </value>
            <value>
                <fullName>13-18 years</fullName>
            </value>
            <value>
                <fullName>6 and Above</fullName>
                <isActive>false</isActive>
                <label>6 and Above</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>