force-app/main/default/objects/Contact/fields/AgeRangeUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>AgeRangeUpdatedDate__c</fullName>
    <label>Age Range Updated Date</label>
    <type>Date</type>
</CustomField>