force-app/main/default/objects/Contact/fields/AnalysisDate__c.field-meta.xml
<CustomField>
    <fullName>AnalysisDate__c</fullName>
    <label>Analysis Date</label>
    <type>Date</type>
</CustomField>