force-app/main/default/objects/Contact/fields/Anniversary_Month__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Month__c</fullName>
    <formula>MONTH(FirstTransactionDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anniversary Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>