force-app/main/default/objects/Contact/fields/Anniversary_Promo__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Promo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anniversary Promo</label>
    <type>Checkbox</type>
</CustomField>