force-app/main/default/objects/Contact/fields/Anonymous_LINE_Contact__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_LINE_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[7-Jul-21 KSK] Transformation Logic in LINE Agency
        IF no Phone and Last Name THEN TRUE
        IF provides Phone and Last Name THEN FALSE</description>
    <label>Anonymous LINE Contact</label>
    <type>Checkbox</type>
</CustomField>