force-app/main/default/objects/Contact/fields/Birth_Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Birth_Hospital_Name__c</fullName>
    <description>[16-Aug-21 Khai] This is a backend field created so that case can pull out birth hospital name as a formula field</description>
    <formula>BirthHospital__r.Name__c</formula>
    <inlineHelpText>Displays the Institution name of the Birth Hospital</inlineHelpText>
    <label>Birth Hospital Name</label>
    <type>Text</type>
</CustomField>