force-app/main/default/objects/Contact/fields/BirthCertificateStatus__c.field-meta.xml
<CustomField>
    <fullName>BirthCertificateStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Birth Certificate Status</label>
    <type>Checkbox</type>
</CustomField>