force-app/main/default/objects/Contact/fields/Birthdate_Month__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Month__c</fullName>
    <formula>MONTH(Birthdate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>