force-app/main/default/objects/Contact/fields/Birthday_Promo_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Promo_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Birthday Promo Eligible</label>
    <type>Checkbox</type>
</CustomField>