force-app/main/default/objects/Contact/fields/BirthHeight__c.field-meta.xml
<CustomField>
    <fullName>BirthHeight__c</fullName>
    <label>Birth Height (cm)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>