force-app/main/default/objects/Contact/fields/BirthHospital__c.field-meta.xml
<CustomField>
    <fullName>BirthHospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Birth Hospital</label>
    <referenceTo>Institution__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>