force-app/main/default/objects/Contact/fields/BirthWeight__c.field-meta.xml
<CustomField>
    <fullName>BirthWeight__c</fullName>
    <label>Birth Weight (in grams)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>