force-app/main/default/objects/Contact/fields/BlacklistedStatus__c.field-meta.xml
<CustomField>
    <fullName>BlacklistedStatus__c</fullName>
    <formula>IF(
            AND(
                ISPICKVAL(Account.Market__c , &quot;TW&quot;),
                        OR(
                        MasterOptOut__c,
                        Blacklisted__c
                        )
            ),
            IMAGE(&quot;/resource/Red_Icon&quot;, &quot;Red&quot;, 20, 20),
            &quot;&quot;
        )</formula>
    <label>Blacklisted Status</label>
    <type>Text</type>
</CustomField>