force-app/main/default/objects/Contact/fields/Block_Count_No__c.field-meta.xml
<CustomField>
    <fullName>Block_Count_No__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Block Count No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>