force-app/main/default/objects/Contact/fields/BlockCount__c.field-meta.xml
<CustomField>
    <fullName>BlockCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Block Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>