force-app/main/default/objects/Contact/fields/Brand_Relationship_EndUser_Child_Count__c.field-meta.xml
<CustomField>
    <fullName>Brand_Relationship_EndUser_Child_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Custom rollup field for counting BRs related to Contact through BR EndUser field</description>
    <label>Brand Relationship EndUser Child Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>