force-app/main/default/objects/Contact/fields/BrandRelationshipCareGiverCount__c.field-meta.xml
<CustomField>
    <fullName>BrandRelationshipCareGiverCount__c</fullName>
    <label>Brand Relationship Care Giver Count</label>
    <summaryFilterItems>
        <field>BrandRelationship__c.CareGiver__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>BrandRelationship__c.PrimaryContact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>