force-app/main/default/objects/Contact/fields/BrandRelationshipCount__c.field-meta.xml
<CustomField>
    <fullName>BrandRelationshipCount__c</fullName>
    <label>Brand Relationship Count</label>
    <summaryFilterItems>
        <field>BrandRelationship__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>BrandRelationship__c.User__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>BrandRelationship__c.PrimaryContact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>