force-app/main/default/objects/Contact/fields/CareGiver__c.field-meta.xml
<CustomField>
    <fullName>CareGiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care Giver (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>