force-app/main/default/objects/Contact/fields/CareGiverEnable__c.field-meta.xml
<CustomField>
    <fullName>CareGiverEnable__c</fullName>
    <formula>IF( BrandRelationshipCareGiverCount__c &gt; 0, TRUE, FALSE)</formula>
    <label>Care Giver</label>
    <type>Checkbox</type>
</CustomField>