force-app/main/default/objects/Contact/fields/CarerPhone__c.field-meta.xml
<CustomField>
    <fullName>CarerPhone__c</fullName>
    <label>Carer Phone</label>
    <type>Phone</type>
</CustomField>