force-app/main/default/objects/Contact/fields/ChildrenUnderMilkCodeRestriction__c.field-meta.xml
<CustomField>
    <fullName>ChildrenUnderMilkCodeRestriction__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Children Under Milk Code Restriction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>