force-app/main/default/objects/Contact/fields/Consumer_Response__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Response__c</fullName>
    <label>Consumer&apos;s Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Happy</fullName>
            </value>
            <value>
                <fullName>Happy</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Unhappy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>