force-app/main/default/objects/Contact/fields/Contact_HomePhoneExt__c.field-meta.xml
<CustomField>
    <fullName>Contact_HomePhoneExt__c</fullName>
    <label>Contact_HomePhoneExt</label>
    <length>12</length>
    <type>Text</type>
</CustomField>