force-app/main/default/objects/Contact/fields/ContactBatchProcessed__c.field-meta.xml
<CustomField>
    <fullName>ContactBatchProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContactBatchProcessed</label>
    <type>Checkbox</type>
</CustomField>