force-app/main/default/objects/Contact/fields/ContactRefNo__c.field-meta.xml
<CustomField>
    <fullName>ContactRefNo__c</fullName>
    <formula>Market__c &amp; &quot;-C-&quot; &amp;  AutoNumber__c</formula>
    <label>Contact Ref No</label>
    <type>Text</type>
</CustomField>