force-app/main/default/objects/Contact/fields/CountryCodeMobile__c.field-meta.xml
<CustomField>
    <fullName>CountryCodeMobile__c</fullName>
    <label>CountryCodeMobile</label>
    <length>30</length>
    <type>Text</type>
</CustomField>