force-app/main/default/objects/Contact/fields/customer_purchased__c.field-meta.xml
<CustomField>
    <fullName>customer_purchased__c</fullName>
    <description>Has the customer purchased from the store?</description>
    <label>Customer Purchased from store</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>