force-app/main/default/objects/Contact/fields/DataSharingOptOutDate__c.field-meta.xml
<CustomField>
    <fullName>DataSharingOptOutDate__c</fullName>
    <label>Data Sharing Opt Out Date</label>
    <type>Date</type>
</CustomField>