force-app/main/default/objects/Contact/fields/DataSharingWithThirdPartyOptOut__c.field-meta.xml
<CustomField>
    <fullName>DataSharingWithThirdPartyOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Sharing Opt Out</label>
    <type>Checkbox</type>
</CustomField>