force-app/main/default/objects/Contact/fields/Deceased_Contact__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Label on Contact object that a contact is deceased</description>
    <label>Deceased Contact</label>
    <type>Checkbox</type>
</CustomField>