force-app/main/default/objects/Contact/fields/Default_Address__c.field-meta.xml
<CustomField>
    <fullName>Default_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>