force-app/main/default/objects/Contact/fields/DistinctBrandRelationshipCount__c.field-meta.xml
<CustomField>
    <fullName>DistinctBrandRelationshipCount__c</fullName>
    <description>Count number of BR with distinct key brand</description>
    <label>Distinct Brand Relationship Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>