force-app/main/default/objects/Contact/fields/Do_Not_Call_Source__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Source__c</fullName>
    <label>Do Not Call Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>