force-app/main/default/objects/Contact/fields/DoNotCallDate__c.field-meta.xml
<CustomField>
    <fullName>DoNotCallDate__c</fullName>
    <label>Do Not Call Date</label>
    <type>Date</type>
</CustomField>