force-app/main/default/objects/Contact/fields/EDDCertificateStatus__c.field-meta.xml
<CustomField>
    <fullName>EDDCertificateStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EDD Certificate Status</label>
    <type>Checkbox</type>
</CustomField>