force-app/main/default/objects/Contact/fields/Education_Level__c.field-meta.xml
<CustomField>
    <fullName>Education_Level__c</fullName>
    <label>Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Associate&apos;s Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor&apos;s Degree</fullName>
            </value>
            <value>
                <fullName>Diploma 1 year</fullName>
            </value>
            <value>
                <fullName>Diploma 2 years</fullName>
            </value>
            <value>
                <fullName>Doctoral Degree</fullName>
            </value>
            <value>
                <fullName>Elementary School</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Junior High School</fullName>
            </value>
            <value>
                <fullName>Master Degree</fullName>
            </value>
            <value>
                <fullName>No certificates</fullName>
            </value>
            <value>
                <fullName>Unwilling to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>