force-app/main/default/objects/Contact/fields/Email_Hashed__c.field-meta.xml
<CustomField>
    <fullName>Email_Hashed__c</fullName>
    <label>Email Hashed</label>
    <length>64</length>
    <type>Text</type>
</CustomField>