force-app/main/default/objects/Contact/fields/Email_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_Main_Contact__c</fullName>
    <label>Email (Main Contact)</label>
    <type>Email</type>
</CustomField>