force-app/main/default/objects/Contact/fields/EmailBounced__c.field-meta.xml
<CustomField>
    <fullName>EmailBounced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Bounced</label>
    <type>Checkbox</type>
</CustomField>