force-app/main/default/objects/Contact/fields/EmailOptOutDate__c.field-meta.xml
<CustomField>
    <fullName>EmailOptOutDate__c</fullName>
    <label>Email Opt Out Date</label>
    <type>Date</type>
</CustomField>