force-app/main/default/objects/Contact/fields/EndUser__c.field-meta.xml
<CustomField>
    <fullName>EndUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End User (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>