force-app/main/default/objects/Contact/fields/EndUser_NonPrimary__c.field-meta.xml
<CustomField>
    <fullName>EndUser_NonPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End User</label>
    <type>Checkbox</type>
</CustomField>