force-app/main/default/objects/Contact/fields/EndUserEnable__c.field-meta.xml
<CustomField>
    <fullName>EndUserEnable__c</fullName>
    <formula>IF(BrandRelationshipEndUserCount__c &gt; 0  || EndUser_NonPrimary__c == TRUE, TRUE, FALSE)</formula>
    <label>End User</label>
    <type>Checkbox</type>
</CustomField>