force-app/main/default/objects/Contact/fields/EnrolledBy__c.field-meta.xml
<CustomField>
    <fullName>EnrolledBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrolled By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AbbottPartner__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dietician</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Contacts (Enrolled By)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>