force-app/main/default/objects/Contact/fields/Ensure_Total_Channel_Response__c.field-meta.xml
<CustomField>
    <fullName>Ensure_Total_Channel_Response__c</fullName>
    <description>Ensure Brand Total Channel Response</description>
    <label>Ensure Total Channel Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>