force-app/main/default/objects/Contact/fields/ErpId__c.field-meta.xml
<CustomField>
    <fullName>ErpId__c</fullName>
    <description>[8-Jul-21 KSK] Put ERPId inside contact as the business wants to get this field to autofill order object</description>
    <label>ERP ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>