force-app/main/default/objects/Contact/fields/EstimatedBirthdate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedBirthdate__c</fullName>
    <label>Estimated Birthdate</label>
    <type>Date</type>
</CustomField>