force-app/main/default/objects/Contact/fields/EstimatedDueDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDueDate__c</fullName>
    <label>Estimated Due Date (EDD)</label>
    <type>Date</type>
</CustomField>