force-app/main/default/objects/Contact/fields/eStoreAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>eStoreAccountNumber__c</fullName>
    <label>eStore Account Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>