force-app/main/default/objects/Contact/fields/Ever_Joined_1M_Journey__c.field-meta.xml
<CustomField>
    <fullName>Ever_Joined_1M_Journey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[13-Aug-21 Khai] Part of US - 3249, a custom field for SFMC to update when contact has been in the MC journey for 1 month old contacts</description>
    <label>Ever Joined 1M Journey</label>
    <type>Checkbox</type>
</CustomField>