force-app/main/default/objects/Contact/fields/ExpiredPoints__c.field-meta.xml
<CustomField>
    <fullName>ExpiredPoints__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expired Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>