force-app/main/default/objects/Contact/fields/External_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Lead_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Lead ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>