force-app/main/default/objects/Contact/fields/External_Lead_ID_Formatted__c.field-meta.xml
<CustomField>
    <fullName>External_Lead_ID_Formatted__c</fullName>
    <description>Remove &apos;FB-&apos; from External Lead ID field</description>
    <formula>RIGHT(External_Lead_ID__c , (LEN( External_Lead_ID__c ) - 3))</formula>
    <label>External Lead ID (Formatted)</label>
    <type>Text</type>
</CustomField>