force-app/main/default/objects/Contact/fields/ExternalLoyaltyID__c.field-meta.xml
<CustomField>
    <fullName>ExternalLoyaltyID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Loyalty ID</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>