force-app/main/default/objects/Contact/fields/FacebookLeadId__c.field-meta.xml
<CustomField>
    <fullName>FacebookLeadId__c</fullName>
    <description>For SG Market</description>
    <label>Facebook Lead Id</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>