force-app/main/default/objects/Contact/fields/First_Brand_Transacted__c.field-meta.xml
<CustomField>
    <fullName>First_Brand_Transacted__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Brand Transacted</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts_First_Brand</relationshipName>
    <type>Lookup</type>
</CustomField>