force-app/main/default/objects/Contact/fields/FirstCall__c.field-meta.xml
<CustomField>
    <fullName>FirstCall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Call</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>First Call</relationshipLabel>
    <relationshipName>FirstCall</relationshipName>
    <type>Lookup</type>
</CustomField>