force-app/main/default/objects/Contact/fields/FirstCallDate__c.field-meta.xml
<CustomField>
    <fullName>FirstCallDate__c</fullName>
    <label>First Call Date</label>
    <type>DateTime</type>
</CustomField>