force-app/main/default/objects/Contact/fields/FirstChannelResponse__c.field-meta.xml
<CustomField>
    <fullName>FirstChannelResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Channel Response</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Contacts (First Channel Response)</relationshipLabel>
    <relationshipName>firstchannel</relationshipName>
    <type>Lookup</type>
</CustomField>