force-app/main/default/objects/Contact/fields/FirstChannelResponseDate__c.field-meta.xml
<CustomField>
    <fullName>FirstChannelResponseDate__c</fullName>
    <label>First Channel Response Date</label>
    <type>DateTime</type>
</CustomField>