force-app/main/default/objects/Contact/fields/FirstTransaction__c.field-meta.xml
<CustomField>
    <fullName>FirstTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Transaction</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>