force-app/main/default/objects/Contact/fields/FirstTransactionDate__c.field-meta.xml
<CustomField>
    <fullName>FirstTransactionDate__c</fullName>
    <label>First Transaction Date</label>
    <type>Date</type>
</CustomField>