force-app/main/default/objects/Contact/fields/Fraud_Status__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Status__c</fullName>
    <label>Fraud Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>