force-app/main/default/objects/Contact/fields/FullAddress__c.field-meta.xml
<CustomField>
    <fullName>FullAddress__c</fullName>
    <formula>Default_Address__r.FullAddress__c</formula>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>